# opu-compiler

./: README.md
backend/: CMakeLists.txt
backend/src/: Arch.h  EngineType.cpp  EngineType.h  LayerInfo.h  driver.cpp
backend/src/bir/: AffineExpr.h  BasicBlock.cpp  BasicBlock.h  Function.cpp  Function.h  Instruction.cpp  Instruction.h  Loop.h  LoopAxis.h  LoopNest.h  MemoryLocation.cpp  MemoryLocation.h  Module.cpp  Module.h  NamedObjectContainer.h  NodeContainer.h
backend/src/pass/: Allocator.cpp  Allocator.h  ChannelEnhance.cpp  ChannelEnhance.h  Codegen.cpp  Codegen.h  DRAMLayoutGen.cpp  DRAMLayoutGen.h  LegacyMC.cpp  LegacyMC.h  LowerComplex.cpp  LowerComplex.h  LowerConv2d.cpp  LowerConv2ddw.cpp  MCBase.cpp  MCBase.h  MachineInst.h  Scheduler.cpp  Scheduler.h  pass.cpp  pass.h
data-layout-generator/: CMakeLists.txt  bias_layout.cpp  bias_layout.h  driver.cpp  utils.cpp  utils.h  weight_layout.cpp  weight_layout.h
docker/: Dockerfile  install_core.sh  install_docker.sh
example/tiny_yolo/: README.md  download_model.sh  frontend.py  input.npy  run.sh
frontend/: CMakeLists.txt  config.cmake
frontend/include/tvm/relay/: transform.h
frontend/mytest/: relay_pass_canonicalize_concat_pos_test.cc  relay_pass_fuse_op_hw_test.cc  relay_pass_fuse_ops_hw_test.cc
frontend/python/tvm/relay/: build_module.py  transform.py
frontend/python/tvm/relay/frontend/: keras.py  onnx.py  tensorflow.py
frontend/python/tvm/relay/op/: _make.py
frontend/python/tvm/relay/op/nn/: nn.py
frontend/python/tvm/relay/utils/: Quantizer.py  analysis.py  fp.py  op.py  outWriter.py  sim.py  tvmFuncParser.py
frontend/python/tvm/relay/utils/cython/: CppClass.h
frontend/python/tvm/relay/utils/graphEditor/: graph_util.py
frontend/python/tvm/relay/utils/preprocess/: vgg_preprocessing.py
frontend/python/tvm/relay/utils_bk/: analysis.py  compile.py  debug.py  fp.py  global_var.py  op.py  outWriter.py  quantization_utils.py  sim.py  suppress_stdout_stderr.py  tvmFuncParser.py
frontend/src/relay/backend/: build_module.cc  graph_codegen_wrapper.h
frontend/src/relay/pass/: canonicalize_concat_pos.cc  canonicalize_concat_pos.h  explicit_pad.cc  explicit_pad.h  fuse_op_hw.cc  fuse_op_hw.h  fuse_op_hw.h.0  fuse_ops_hw.cc  fuse_ops_hw.h  gen_hw_ir.cc  gen_hw_ir.h  hw_info.h  pattern_util.h  peephole.cc  quantize.cc  quantize.h  to_nchw_layout.cc  verifier.cc  verifier.h
frontend/src/runtime/graph/: graph_runtime.h
frontend/tests/OPU_unittest/: task_cpp_unittest.sh
frontend/tests/cpp/: canonicalize_concat_test.cc  relay_pass_canonicalize_concat_pos_test.cc  relay_pass_fuse_ops_hw_test.cc
util/: run_ir_json.py
(+4 files in other folders)
